--- a/Educonecta/composer.json
+++ b/Educonecta/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "filament/forms": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/laravel-firebase": "^5.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
