Adición: cargue de archivos a firebase

--- a/Educonecta/.env
+++ b/Educonecta/.env
@@ -58,3 +58,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FIREBASE_CREDENTIALS=./public/firebase_credentials.json
+FIREBASE_DATABASE_URL=https://educonecta-4ecc4-default-rtdb.firebaseio.com/
